syntax = "proto3";

package ica.bank;

service IcaBank {
    // Sends tokens from ICA (Interchain Account) on host chain
    rpc Send (SendRequest) returns (SendResponse);
}

message SendRequest {
    // Chain ID of IBC enabled chain to connect to
    string chain_id = 1;
    // An optional request ID for tracking purposes
    optional string request_id = 2;
    // Receiver address on IBC enabled chain
    string to_address = 3;
    // Amount of tokens to be sent
    string amount = 4;
    // Denom of tokens to be sent
    string denom = 5;
    // True if given denom is an IBC denom generated by solo machine
    bool ibc_denom = 6;
    // Memo value to be used in cosmos sdk transaction
    optional string memo = 7;
}

message SendResponse {
    // Hash of transaction on IBC enabled chain (in hex)
    string transaction_hash = 1;
}