syntax = "proto3";

import "google/protobuf/timestamp.proto";

package query;

service Query {
    // Fetches on-chain balance of a given denom
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse);

    // Fetches transaction history of given chain
    rpc GetHistory (GetHistoryRequest) returns (GetHistoryResponse);

    // Fetches the final on-chain denom of a solo machine token 
    rpc GetIbcDenom (GetIbcDenomRequest) returns (GetIbcDenomResponse);
}

message GetBalanceRequest {
    // Chain ID
    string chain_id = 1;
    // Denom of tokens
    string denom = 2;
    // True if given denom is an IBC denom generated by solo machine
    bool ibc_denom = 3;
}

message GetBalanceResponse {
    // Balance of given denom on-chain
    string balance = 1;
}

message GetHistoryRequest {
    // Chain ID
    string chain_id = 1;
    // Number of records to query
    optional uint32 limit = 2;
    // Query offset
    optional uint32 offset = 3;
}

message GetHistoryResponse {
    // List of operations performed
    repeated Op operations = 1;
}

message GetIbcDenomRequest {
    // Chain ID
    string chain_id = 1;
    // Denom of tokens
    string denom = 2;
}

message GetIbcDenomResponse {
    // On-chain denom of given solo machine token
    string ibc_denom = 1;
}

message Op {
    // ID of operation
    int64 id = 1;
    // An optional request ID for tracking purposes
    optional string request_id = 2;
    // Chain ID of IBC enabled chain
    string chain_id = 3;
    // Port ID of IBC channel
    string port_id = 4;
    // Type of operation
    oneof op_type {
        // Mint operation
        MintOperation mint = 5;
        // Burn operation
        BurnOperation burn = 6;
        // ICA send operation
        IcaSendOperation ica_send = 7;
        // ICA deposit operation
        IcaDelegateOperation ica_delegate = 8;
        // ICA undelegate operation
        IcaUndelegateOperation ica_undelegate = 9;
    }
    // Transaction hash
    string transaction_hash = 10;
    // Time at which this operation was done
    google.protobuf.Timestamp created_at = 11;
}

message MintOperation {
    // Receiver's address
    string to = 1;
    // Denom of tokens minted
    string denom = 2;
    // Amount of tokens minted
    string amount = 3;
}

message BurnOperation {
    // Address from which tokens were burnt
    string from = 1;
    // Denom of tokens burnt
    string denom = 2;
    // Amount of tokens burnt
    string amount = 3;
}

message IcaSendOperation {
    // Receiver's address
    string to = 1;
    // Denom of tokens minted
    string denom = 2;
    // Amount of tokens minted
    string amount = 3;
}

message IcaDelegateOperation {
    // Validator address
    string validator_address = 1;
    // Denom of tokens minted
    string denom = 2;
    // Amount of tokens minted
    string amount = 3;
}

message IcaUndelegateOperation {
    // Validator address
    string validator_address = 1;
    // Denom of tokens minted
    string denom = 2;
    // Amount of tokens minted
    string amount = 3;
}


